# figureflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  llms.txt  package.json  pyproject.toml  sunset.md
.devcontainer/: Dockerfile  devcontainer.json  install-cc-toggler-vsix.sh  setup-git-signing.sh
.github/workflows/: ci.yml
docs/claude_logs/: DECISION_LOG.md
docs/guide/: getting-started.md  index.md  reference.md  troubleshooting.md
docs/guide/how-to/: custom-components.md  display-anywhere.md  edit-on-canvas.md  group-and-layout.md  import-diagrams.md  save-and-load.md  style-edges.md  style-nodes.md
docs/guide/operations/: mcp-server.md
docs/planning/: ITER_01.md  ITER_02.md  ITER_03.md  ITER_04.md  ITER_05.md  ITER_06.md  ITER_V2_01.md  ITER_V2_02.md  ITER_V2_03.md  ITER_V2_04.md  ITER_V3_01.md  ITER_V3_02.md  ITER_V3_03.md  SKELETON.md  SKELETON_V2.md
docs/prompts/: README.md  json_examples.md  mermaid_examples.md  repair_loop.md
examples/: 01_quickstart.py  02_grouping_layout.py  03_serialization.py  04_custom_component.py  05_display_targets.py  06_from_mermaid.py  07_llm_ingestion.py  08_mcp_server.py  README.md  custom_component.py  display_targets.py  examples.ipynb  grouping_layout.py  quickstart.py  serialization.py
js/: index.js  synccore.js
js/adapters/: anywidget.js  server.js  static.js
src/figureflow/: __init__.py  mcp_server.py  mermaid_in.py  serialize.py  synccore.py
src/figureflow/static/: figureflow.d.ts  figureflow.schema.json  host.html  widget.css  widget.js
src/figureflow/transport/: __init__.py  anywidget_adapter.py  base.py  server_adapter.py  static_export.py
src/pyxyflow/: __init__.py
src/pyxyflow/static/: widget.css
tests/: test_figureflow.py
tests/corpus/: 01_simple_pipeline.mmd  02_decision_tree.mmd  03_ci_cd.mmd  04_org_chart.mmd  05_state_machine.mmd  06_subgraph_services.mmd  07_chain.mmd  08_fan_out.mmd  09_edge_styles.mmd  10_data_flow.mmd  11_approval.mmd  12_microservices.mmd  13_user_journey.mmd  14_error_handling.mmd  15_quoted_labels.mmd  16_br_labels.mmd  17_comments.mmd  18_inline_label_form.mmd  19_etl_subgraphs.mmd  20_mixed_shapes.mmd  21_graph_keyword.mmd  22_no_direction.mmd  23_auth_flow.mmd  24_release_pipeline.mmd
