[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figureflow"
version = "2.0.1"
description = "Interactive flow diagrams in Python, styled shape-by-shape."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["jupyter", "widget", "flowchart", "diagram", "react-flow"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "anywidget>=0.9",
    "traitlets",
]

[project.optional-dependencies]
dev = ["pytest>=7", "coverage>=7", "pytest-cov>=5"]
# The agent door (ITER_V3_03). Core `pip install figureflow` stays dependency-free;
# the MCP server lives behind this extra and a lazy import.
mcp = ["mcp>=1.0"]

[project.scripts]
figureflow-mcp = "figureflow.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/cheneeheng/figureflow"

[tool.hatch.build.targets.wheel]
packages = ["src/figureflow"]

# Force-include the prebuilt front-end so the bundle always ships in the wheel,
# even when it is a build artifact rather than a tracked source file.
[tool.hatch.build.targets.wheel.force-include]
"src/figureflow/static/widget.js" = "figureflow/static/widget.js"
"src/figureflow/static/widget.css" = "figureflow/static/widget.css"
"src/figureflow/static/figureflow.d.ts" = "figureflow/static/figureflow.d.ts"
"src/figureflow/static/figureflow.schema.json" = "figureflow/static/figureflow.schema.json"
"src/figureflow/static/host.html" = "figureflow/static/host.html"
